file pathe is changed for assets

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                 <img src="/assests/images/logo.png" alt="logo">
+                 <img src="assests/images/logo.png" alt="logo">
                 </div>
            <nav>
             <a href="index.html">Home</a>
@@ -64,7 +64,7 @@
          <p class="sharing-hero-para">Ready for a healthier smile?</p>
     </div>
     <div class="hero-image">
-        <img src="frontend/assests/images/doctor_of_hero.png"  alt="" class="hero-image-middle">
+        <img src="assests/images/doctor_of_hero.png"  alt="" class="hero-image-middle">
     </div>
     <div class="patient-comfort">
         <h2 class="sharing-hero">Patient Comfort <i class="fa-solid fa-arrow-right"></i></h2>
