--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                 <img src="/assests/images/logo.png" alt="logo">
+                 <img src="assests/images/logo.png" alt="logo">
                 </div>
            <nav>
             <a href="index.html">Home</a>
@@ -327,4 +327,5 @@ The doctors here are incredibly skilled and attentive to patient needs. They too
 </footer>
 
 </body>
+
 </html>
