--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                 <img src="frontend/assests/images/logo.png" alt="logo">
+                 <img src="../assests/images/logo.png" alt="logo">
                 </div>
            <nav>
             <a href="index.html">Home</a>
